// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root"
>
  <ul
    className="list
          alignStart"
  >
    <ListItem>
      content
    </ListItem>
  </ul>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root"
>
  <ul
    className="list
          alignStart"
  >
    <ListItem>
      content 1
    </ListItem>
    <ListItem>
      content 2
    </ListItem>
    <ListItem>
      content 3
    </ListItem>
  </ul>
</div>
`;

exports[`rendering renders correctly with multiple children and all props 1`] = `
<div
  className="root
        isAutoWidth"
>
  <ul
    className="list
          alignEnd"
  >
    <ListItem>
      content 1
    </ListItem>
    <ListItem>
      content 2
    </ListItem>
    <ListItem>
      content 3
    </ListItem>
  </ul>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;
